# AI-dev-playground

./: .gitignore  cut_classify_TG.ipynb  myoquant-sdh-train.ipynb  pyproject.toml  text-embetter.ipynb  tg_image_embetter.ipynb
