[tool.poetry]
name = "myoquant-sdh-train"
version = "0.1.0"
description = ""
authors = ["Corentin"]
readme = "README.md"
packages = [{include = "myoquant_sdh_train"}]

[tool.poetry.dependencies]
python = ">=3.8.1, < 3.11"
confection = "^0.0.4"
typer = "^0.7.0"
rich = "^13.0.1"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.3"
pandas = "^1.5.2"
dvc = "^2.41.1"
tensorboard = "^2.11.0"
embetter = {version = "^0.3", extras = ["all"]}
doubtlab = "^0.2.4"
ipykernel = "^6.20.1"
tensorflow = "^2.11.0"
ipywidgets = "^8.0.4"
umap-learn = "^0.5.3"
scikeras = {extras = ["tensorflow"], version = "^0.10.0"}
imageio = "^2.25.0"
pigeon-jupyter = "^0.1.0"
scikit-image = "^0.19.3"
openpyxl = "^3.1.0"
deepl = "^1.13.0"
python-dotenv = "^0.21.1"
cohere = "^3.3.2"
openai = "^0.26.4"
imagecodecs = "^2023.1.23"
accelerate = "^0.16.0"
debugpy = "^1.6.6"
sentence-transformers = "^2.2.2"
nomic = "^1.1.4"
peft = "^0.2.0"
wandb = "^0.14.1"
langchain = "^0.0.133"
instructorembedding = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.12.0"
ruff = "^0.0.219"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
